--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Keyboard Tester Pro</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
+    <meta name="description" content="Test your keyboard's functionality with Keyboard Tester Pro - check all keys, detect issues, and ensure optimal performance for your mechanical or membrane keyboard." />
+    <meta name="keywords" content="keyboard tester, keyboard test online, check keyboard keys, mechanical keyboard tester, keyboard diagnostic tool" />
+    <meta name="author" content="Daryl John Tadeo" />
+    <title>Keyboard Tester Pro | Online Keyboard Testing & Diagnostic Tool</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx" defer></script>
   </body>
 </html>
